# karpathy-gpt2-lesson

./: .gitignore  README.md  fineweb.py  inspect_dataset.py  notebook.ipynb  pyproject.toml  train_gpt2.py
